tests/errors/semantics/constant_parameter_type_in_funcsig.odl
main :: () -> void  {
    myint := int;
    add := (int, myint) -> int;
};